# linuxcmdscan

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
linuxcmdscan/: cli.py
