[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "linuxcmdscan"
version = "1.2.0"
description = "Inventory Linux command usage across repositories"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

[project.scripts]
linuxcmdscan = "linuxcmdscan.cli:main"